# dev_obazl

./: .gitignore  README.md  quickstart.md
demos/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  BUILD.bzl  OPAM.export  README.md  TESTS.md  WORKSPACE.bazel  WORKSPACE.bzl  opam.bzl
demos/aggregators/: BUILD.bazel  README.md
demos/aggregators/ocaml_archives/: BUILD.bazel
demos/aggregators/ocaml_archives/case110/: BUILD.bazel
demos/aggregators/ocaml_archives/case114/: BUILD.bazel
demos/aggregators/ocaml_archives/case118/: BUILD.bazel
demos/aggregators/ocaml_archives/case120/: BUILD.bazel
demos/aggregators/ocaml_archives/case124/: BUILD.bazel
demos/aggregators/ocaml_archives/case126/: BUILD.bazel
demos/aggregators/ocaml_archives/case128/: BUILD.bazel
demos/aggregators/ocaml_libraries/case210/: BUILD.bazel
demos/aggregators/ocaml_libraries/case214/: BUILD.bazel
demos/aggregators/ocaml_libraries/case218/: BUILD.bazel
demos/aggregators/ocaml_libraries/case220/: BUILD.bazel
demos/aggregators/ocaml_libraries/case224/: BUILD.bazel
demos/aggregators/ocaml_libraries/case228/: BUILD.bazel
demos/aggregators/ocaml_libraries/case230/: BUILD.bazel
demos/aggregators/ocaml_libraries/case250/: BUILD.bazel
demos/aggregators/ppx_archives/: BUILD.bazel
demos/aggregators/ppx_archives/case310/: BUILD.bazel
demos/aggregators/ppx_archives/case314/: BUILD.bazel
demos/aggregators/ppx_archives/case318/: BUILD.bazel
demos/aggregators/ppx_libraries/case410/: BUILD.bazel
demos/aggregators/ppx_libraries/case414/: BUILD.bazel
demos/aggregators/ppx_libraries/case418/: BUILD.bazel
demos/aggregators/ppx_libraries/case420/: BUILD.bazel
demos/aggregators/ppx_libraries/case424/: BUILD.bazel
demos/aggregators/ppx_libraries/case428/: BUILD.bazel
demos/algebra/group/: BUILD.bazel
demos/cli/cmdliner/: BUILD.bazel
demos/cli/config/: BUILD.bazel  README.md  config.ml
demos/cli/sys.argv/: BUILD.bazel  README.md
demos/conditional/: BUILD.bazel
demos/configuration/: BUILD.bazel  BUILD.bzl  README.md  config.ml.template
demos/configuration/opam/case110/: .bazelignore  .bazelrc  .gitignore  WORKSPACE.bazel  WORKSPACE.bzl
demos/configuration/template/: BUILD.bazel
demos/dev/: .gitignore
demos/executables/: README.md
demos/filegen/genrule/: BUILD.bazel
demos/filegen/template/: BUILD.bazel  BUILD.bzl
demos/interop/: README.md
demos/interop/ffi/: BUILD.bazel  main.ml
demos/interop/ffi/case110/: BUILD.bazel
demos/interop/ffi/case120/: BUILD.bazel
demos/interop/ffi/cclibs/: BUILD.bazel
demos/interop/ffi/chained/: BUILD.bazel
demos/minimal/: BUILD.bazel
demos/minimal/hello/: BUILD.bazel
demos/minimal/hello_archive/: BUILD.bazel  easy.ml  main.ml  simple.ml
demos/minimal/hello_executable/: BUILD.bazel
demos/minimal/hello_lwt/: BUILD.bazel
demos/minimal/hello_module/: BUILD.bazel
demos/minimal/hello_ppx/: BUILD.bazel  hello.ml  hello_ppx.ml
demos/minimal/rgb1/: BUILD.bazel
demos/minimal/rgb2/: BUILD.bazel
demos/module_binding/: BUILD.bazel
demos/module_binding/improper/: BUILD.bazel
demos/module_binding/proper/: BUILD.bazel
demos/module_binding/selectboth/: BUILD.bazel  hello_macos_en.ml
demos/module_binding/selectboth/filename_prefix/: BUILD.bazel
demos/module_binding/selectsig/: BUILD.bazel
demos/module_binding/selectstruct/: BUILD.bazel
demos/module_binding/selectstruct/dir_prefix/: BUILD.bazel
demos/module_binding/split/: BUILD.bazel
demos/module_binding/split/a1/: BUILD.bazel
demos/module_binding/split/a2/: BUILD.bazel
demos/module_binding/split/b1/: BUILD.bazel
demos/module_binding/split/c1/: BUILD.bazel
demos/module_binding/split/sig/: BUILD.bazel
demos/module_binding/split/struct/: BUILD.bazel
demos/module_binding/splits/: BUILD.bazel
demos/module_binding/splits/b1/: BUILD.bazel
demos/namespaces/: BUILD.bazel
demos/namespaces/direct/: README.md
demos/namespaces/direct/flat/: README.md
demos/namespaces/direct/hash/: Makefile  README.md
demos/namespaces/direct/ns_sep/: README.md
demos/namespaces/hello/: BUILD.bazel  test.ml
demos/namespaces/makefiles/ns_sep/: README.md
demos/namespaces/new/: BUILD.bazel
demos/namespaces/new/case100/: BUILD.bazel
demos/namespaces/new/case101/: BUILD.bazel
demos/namespaces/new/case102/: BUILD.bazel
demos/namespaces/new/case104/: BUILD.bazel
demos/namespaces/new/case110/: BUILD.bazel
demos/namespaces/new/case120/: BUILD.bazel
demos/namespaces/new/case130/: BUILD.bazel
demos/namespaces/new/case140/: BUILD.bazel
demos/namespaces/new/case150/: BUILD.bazel
demos/namespaces/new/case153/: BUILD.bazel
demos/namespaces/new/case155/: BUILD.bazel
demos/namespaces/new/case160/: BUILD.bazel
demos/namespaces/new/case200/: BUILD.bazel  color.ml
demos/namespaces/new/case336x/: BUILD.bazel
demos/namespaces/new/case500/: BUILD.bazel
demos/namespaces/new/case502/: BUILD.bazel
demos/namespaces/new/case510/: BUILD.bazel
demos/namespaces/new/case520/: BUILD.bazel
demos/namespaces/obazl/: BUILD.bazel  README.md  test.ml
demos/ppx/: BUILD.bazel  README.md
demos/ppx/adjunct_deps/: BUILD.bazel  hello.ml
demos/ppx/driver/: BUILD.bazel  hello.ml  test.ml
demos/ppx/genrule/: BUILD.bazel
demos/ppx/hello/: BUILD.bazel  test.ml
demos/ppx/manual/: test.ml
demos/ppx/mixed_mode/: BUILD.bazel  alpha.ml  main.ml  message.ml  mixed_mode.ml  ppx_message.ml  test.ml
demos/ppx/ppx_codeps/: BUILD.bazel
demos/ppx/ppx_optcomp/: BUILD.bazel  config.mlh  hello.ml  test.ml
demos/ppx/runner/: BUILD.bazel
demos/rules/: BUILD.bazel
demos/rules/ocaml_archive/: BUILD.bazel  main.ml  main2.ml  test.ml
demos/rules/ocaml_executable/: BUILD.bazel  test.ml
demos/rules/ocaml_interface/: BUILD.bazel
demos/rules/ocaml_lex/: BUILD.bazel
demos/rules/ocaml_module/: BUILD.bazel
demos/rules/ocaml_signature/: BUILD.bazel
demos/rules/ocaml_test/: BUILD.bazel  test_ppx_inline.ml
demos/signatures/: BUILD.bazel
demos/test/: BUILD.bazel
demos/tools/: README.md
demos/tools/cppo/: BUILD.bazel
demos/tools/genrule/: BUILD.bazel
(+318 files in other folders)
