workspace( name = "demos" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
)

git_repository(
    name = "obazl_tools_obazl",
    remote = "https://github.com/obazl/tools_obazl",
    branch = "dev",
)

git_repository(
    name = "obazl_tools_opam",
    remote = "https://github.com/obazl/rules_opam",
    branch = "nocamlfind",
)

git_repository(
    name = "obazl_rules_ocaml",
    remote = "https://github.com/obazl/rules_ocaml",
    branch = "nocamlfind",
)

load("@obazl_tools_opam//opam:bootstrap.bzl",
     opam_configure = "configure",
     opam_install = "install")
# load("//:WORKSPACE.bzl", "opam")
# opam_configure(opam = opam)

opam_install()


load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//:WORKSPACE.bzl", opam = "opam")

# ocaml_configure(verbose=True, debug=True)              ## case 0
# ocaml_configure()                                      ## case 0

# ocaml_configure(opam = opam, build = "4.11.1+flambda")               ## case 1

ocaml_configure(switch = "4.10")                     ## case 1
#  ocaml_configure(switch = "4.11.1")                     ## case 1
# ocaml_configure(switch = "4.11.1", verbose=True, debug=True) ## case 1
# ocaml_configure(switch = "4.11.1", opam=opam)          ## error: incompatible
# ocaml_configure(switch = "4.11.1", build="4.11.1")     ## error: incompatible
# ocaml_configure(switch = "noswitch")                   ## error: not found

## opam arg incompatible with env var OPAMSWITCH
# ocaml_configure(opam = opam, verbose=True, debug=True) ## case 2

## build config v1.0.0-dev has verify=True; this makes it VERY slow
# ocaml_configure(opam = opam, build="v1.0.0-dev", verbose=True, debug=True)    ## case 2:
# ocaml_configure(opam = opam, build="v1.0.0-beta.1", verbose=True, debug=True)    ## case 2:

# ocaml_configure(opam = opam, switch="4.11.1")          ## error: incompatible
# ocaml_configure(opam = opam, build="v1.0.0-dev", switch="4.11.1") ## error: incompatible
# ocaml_configure(opam = opam, build="v1.0.0-dev", verbose=True, debug=True)                           ## case 2


# ocaml_configure(build = "v1.0.0-dev")                   ## error
# ocaml_configure(opam=opam, build = "v1.0.0-dev", switch="4.11.1")  ## error
# verify, install, pin, hermetic only make sense with opam
# ocaml_configure(verify = True)                          ## error
# ocaml_configure(install = True)                         ## error
# ocaml_configure(pin = True)                             ## error
# ocaml_configure(hermetic = True)                        ## error
# ocaml_configure(verify = True, install = True)          ## error

# ocaml_configure(build = "v1.0.0-dev")                 ## error


# ocaml_configure(opam = opam, switch = "mina-0.1.0")  ## case A.1


# local_repository(
#     name = "obazl_rules_ocaml",
#     path = ".."
# )

# load("@obazl_rules_ocaml//ocaml:deps.bzl",
#      "ocaml_configure_tooling",
#      # "ocaml_repositories",
#      # "ocaml_home_sdk",
#      "ocaml_register_toolchains")

# ocaml_configure_tooling()

# ocaml_register_toolchains(installation="host")

