
test_suite(
    name = "test",
    tests = [
        "//aggregators/ocaml_archives/case110:test",
        "//aggregators/ocaml_archives/case114:test",
        "//aggregators/ocaml_archives/case118:test",
        "//aggregators/ocaml_archives/case120:test",
        "//aggregators/ocaml_archives/case124:test",
        "//aggregators/ocaml_archives/case128:test",

        "//aggregators/ocaml_libraries/case210:test",
        "//aggregators/ocaml_libraries/case214:test",
        "//aggregators/ocaml_libraries/case218:test",
        "//aggregators/ocaml_libraries/case220:test",
        "//aggregators/ocaml_libraries/case224:test",
        "//aggregators/ocaml_libraries/case228:test",

        "//aggregators/ppx_archives/case310:test",

        "//aggregators/ppx_libraries/case410:test",
        "//aggregators/ppx_libraries/case414:test",
        "//aggregators/ppx_libraries/case418:test",
        "//aggregators/ppx_libraries/case420:test",
        "//aggregators/ppx_libraries/case424:test",
        "//aggregators/ppx_libraries/case428:test",
    ]
)
