
test_suite(
    name = "test",
    tests = [
        "//module_binding/improper:test",
        "//module_binding/proper:test",
        "//module_binding/splits:test",
        "//module_binding/selectstruct:test",
        "//module_binding/selectsig:test",
        "//module_binding/selectboth:test",
        "//module_binding/namespaced:test",
    ]
)
