
test_suite(
    name = "test",
    tests = [

        "//aggregators:test",
        "//configuration/template:test",
        "//filegen/genrule:test",
        "//filegen/template:test",
        "//interop:test",
        "//minimal:test",
        "//namespaces:test",
        "//ppx/mixed_mode:test",
        "//ppx/derivers/simple_deriver:test"
        # "//ppx:test"
    ]
)
