load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_signature",
    "ocaml_test",
)

string_flag(name="g", build_setting_default="n0")

config_setting(
    name = "n0",
    flag_values = {":g": "n0"},
)

config_setting(
    name = "n1",
    flag_values = {":g": "n1"},
)

ocaml_test(
    name = "test",
    main = ":_Test"
)

ocaml_module(
    name   = "_Test",
    module = "test",
    struct = select({
        ":n0": "test_N0.ml",
        ":n1": "test_N1.ml",
    }),
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [":group",
            "@opam//lib/ounit2"]
)

ocaml_module(
    name   = "group",
    module = "group",
    struct = select({
        ":n0": "group_N0.ml",
        ":n1": "group_N1.ml",
    }),
    sig = "group_cmi",
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        "@opam//lib/ounit2",
    ],
)

ocaml_signature(
    name = "group_cmi",
    src = "group.mli",
)

