# to run: $ bazel run cli/sys.argv/kitty -- <filename>

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
    "ocaml_test",
)

ocaml_executable(
    name = "tail",
    opts = ["-verbose"],
    main = ":_Tail"
)

ocaml_module(
    name = "_Tail",
    struct = "tail_ex.ml",
    opts   = [
        # "-verbose",
        "-w", "-26", # warning: unused variable
        "-linkall"
    ],
    deps = [
        "//cli/config",
        "@opam//lib/cmdliner",
    ]
)

