# to run: $ bazel run cli/sys.argv/kitty -- <filename>

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module"
)

ocaml_executable(
    name = "kitty",
    deps = [":_Kitty"]
)

ocaml_module(
    name = "_Kitty",
    struct = "kitty.ml",
    deps = ["//cli/config"]
)

