# To build, from examples/ run: $ bazel build //hello/simple:simple
# You can shorten //hello/simple:simple to hello/simple
# To run: $ bazel run hello/simple

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

ocaml_executable(
    name = "hello",
    deps = [":_Hello"],
)

ocaml_module(
    name = "_Hello",
    src  = "hello.ml",
)

