# To build: $ bazel build minimal/hello_executable
# To run:   $ bazel run minimal/hello_executable

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

ocaml_executable(
    name = "hello_executable",
    deps = [":_Hello"],
)

ocaml_module(
    name = "_Hello",
    struct = "hello.ml",
)
