# $ bazel run minimal/hello_lwt
# or: $ bazel build minimal/hello_lwt
# or: $ bazel build minimal/hello_lwt:_Hello_lwt

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

ocaml_executable(
    name = "hello_lwt",
    # opts = ["-no-thread"], ## -thread is added by default
    ## without -thread:
    ## "ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch"
    ## followed by "Error: Required module `Condition' is unavailable"
    deps = [":_Hello_lwt"],
    visibility = ["//visibility:public"],
)

ocaml_module(
    name = "_Hello_lwt",
    src  = "hello_lwt.ml",
    opts = ["-thread"],  # avoid warning about possible linking problems
    deps = ["@opam//pkg:lwt.unix"]
    # default visibility is private
)

