# $ bazel run minimal/hello_lwt
# or: $ bazel build minimal/hello_lwt
# or: $ bazel build minimal/hello_lwt:_Hello_lwt

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

ocaml_executable(
    name = "hello_lwt",
    visibility = ["//visibility:public"],
    # opts = ["-no-thread"], ## -thread is added by default
    ## without -thread:
    ## "ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch"
    ## followed by "Error: Required module `Condition' is unavailable"
    deps = [":_Hello_lwt"],
)

ocaml_module(
    name = "_Hello_lwt",
    opts = ["-thread"],  # avoid warning about possible linking problems
    struct = "hello_lwt.ml",
    deps = ["@ocaml//lib/lwt/unix"],
    # default visibility is private
)
