# To build the module: $ bazel build minimal/hello_module:Hello
# To run the test:     $ bazel test minimal/hello_module

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_test"
)

ocaml_test(
    name = "test",
    main = "test.ml",
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        "@opam//pkg:ounit2",
        "Hello"
    ]
)

ocaml_module(
    name = "Hello",
    src  = "hello.ml",
)

