load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_test",
)

# no renaming, no aliasing, no namespacing

ocaml_test(
    name = "test",
    main = "_Test"
)

ocaml_module(
    name   = "_Test",
    struct = "test.ml",
    # deps_opam = ["ounit2"],
    opts = [
        "-w",
        "-27",
    ],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        ":_Blue",
        ":_Green",
        ":_Red",
        "@opam//lib/ounit2"
    ],
)

ocaml_module(
    name = "_Red",
    struct = "red.ml",
    visibility = ["//namespaces/obazl/set500/case510:__pkg__"]
)

ocaml_module(
    name = "_Green",
    struct = "green.ml",
    visibility = ["//namespaces/obazl/set500/case510:__pkg__"]
)

ocaml_module(
    name = "_Blue",
    struct = "blue.ml",
    visibility = ["//namespaces/obazl/set500/case510:__pkg__"]
)
