
test_suite(
    name = "test",
    tests = [
        "//module_binding/split/a1:test",
        "//module_binding/split/a2:test",
        "//module_binding/split/b1:test",
        "//module_binding/split/b2:test",
        "//module_binding/split/c1:test",
        "//module_binding/split/c2:test"
    ]
)
