# $ bazel test demos/namespaces/hello:test

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_library",
    "ocaml_module",
    "ocaml_ns_library",
    "ocaml_test"
)

ocaml_test(
    name = "test",
    main = "_Test"
)

ocaml_module(
    name   = "_Test",
    struct = "test.ml",
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        ":hello",
    ],
    deps_opam = [
        "ounit2",
    ]
)

ocaml_ns_library(
    name = "hello",
    submodules = {
        ":_Australian": "Australian",
        ":_English": "English",
        ":_French": "French",
        ":_Spanish": "Spanish"
    },
)

## Each submodule must depend on the ns env target
ocaml_module(
    name = "_Australian",
    struct  = "australian.ml",
)

ocaml_module(
    name = "_English",
    struct  = "english.ml",
    visibility = ["//visibility:public"],
)

ocaml_module(
    name = "_French",
    struct  = "french.ml",
)

ocaml_module(
    name = "_Spanish",
    struct  = "spanish.ml",
)

